@@ -71,10 +71,10 @@ Set a background image.
 Set a title
 .TP
 \fB\-\-font\-size SIZE\fR
-Font size.
+Font size used by the date and title.
 .TP
 \fB\-\-font\-colour FFFFFF\fR
-Font colour in hex.
+Font colour used by the date and title in hex.
 .TP
 \fB\-\-key\fR
 Show file extension key.
@@ -100,17 +100,23 @@ Get the git log of a branch other than the current one.
 \fB\-\-follow\-user USER\fR
 Have the camera automatically follow a particular user.
 .TP
+\fB\-\-highlight\-dirs\fR
+Highlight the names of all directories.
+.TP
 \fB\-\-highlight\-user USER\fR
 Highlight the names of a particular user.
 .TP
 \fB\-\-highlight\-users\fR
 Highlight the names of all users.
 .TP
-\fB\-\-highlight\-dirs\fR
-Highlight the names of all directories.
-.TP
 \fB\-\-highlight\-colour FFFFFF\fR
-Highlighted text colour in hex.
+Font colour for highlighted users in hex.
+.TP
+\fB\-\-selection\-colour FFFFFF\fR
+Font colour for selected users and files.
+.TP
+\fB\-\-dir\-colour FFFFFF\fR
+Font colour for directories.
 .TP
 \fB\-\-file\-extensions\fR
 Show filename extensions only.
